--- a/templates/NOVA/themes/clear/sass/components/_buttons.scss
+++ b/templates/NOVA/themes/clear/sass/components/_buttons.scss
@@ -34,6 +34,7 @@
   border-width: 2px;
   position: relative;
   overflow: hidden;
+  z-index: 1;
   &::before {
     content: '';
     position: absolute;
